# Megaprosjekt-AIS2105

./: README.md
src/: .gitignore
src/cameraDetector/: package.xml  setup.py
src/cameraDetector/cameraDetector/: __init__.py
src/camera_detector/: package.xml  setup.cfg  setup.py
src/camera_detector/camera_detector/: __init__.py
src/simpleMover/: CMakeLists.txt  package.xml
src/simpleMover/launch/: robot.launch.py
src/simpleMover/src/: main.cpp  main2.cpp
src/simple_mover/: CMakeLists.txt  package.xml
src/simple_mover/launch/: robot.launch.py
src/simple_mover/src/: main.cpp  main2.cpp
